--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Título do Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus nostrum, dolores expedita autem soluta tempore fuga dolorem, sed error vitae magnam eos saepe consequuntur, repellendus quis dicta sapiente magni molestias!</p>
         </article>
         <article>
-            <h2>Título do Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos ab consectetur aspernatur laboriosam sint adipisci esse quo dolorem! Laborum, veniam consequatur! Laboriosam, deserunt laborum non quam consequuntur aspernatur at harum.</p>
         </article>
     </main>
 </body>
